src/objects/BMCServiceDesk__BMC_WAN__c.object
<CustomObject>
    <description>BMC_WAN. CMDB Class, that stores information about collections of configuration items (CIs) related to IP subnets in a wide area network (WAN). The BMC_WAN class has no direct subclasses, but it includes several attributes that specify various properties of the WAN. For example, the WANType attribute defines the protocol used for the WAN as ATM, Frame Relay, Unknown, or Other. This class has no corresponding DMTF CIM class.</description>
    <fields>
        <fullName>BMCServiceDesk__Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Resolution_Date__c</fullName>
        <label>Resolution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__WAN_Type__c</fullName>
        <label>WAN Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>ATM</fullName>
                </value>
                <value>
                    <fullName>Frame Relay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>WAN</label>
    <nameField>
        <label>WAN Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WAN</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>